Openrewrite recipes ran: UpgradeToJava21, JavaApiBestPractices, CommonStaticAnalysis, CodeCleanup